--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "nodeom": "^0.0.1",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -17,11 +24,5 @@
   "bugs": {
     "url": "https://github.com/AmandaAmos/FriendFinder/issues"
   },
-  "homepage": "https://github.com/AmandaAmos/FriendFinder#readme",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "nodeom": "0.0.1",
-    "path": "^0.12.7"
-  }
+  "homepage": "https://github.com/AmandaAmos/FriendFinder#readme"
 }
